Added swagger docs to all endpoints
